--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -1,7 +1,13 @@
 body{
+    text-align:center;
+    
     h1{
         font-family:'Courier New', Courier, monospace;
         font-size:50px;
-        text-align:center;
+    }
+
+    img{
+        max-width:150px;
+        height:auto;
     }
 }
